force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/BMCServiceDesk__Broadcasts__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpBroadcast</customHelpPage>
    <description>This object allows you to store data for broadcasts.</description>
    <label>Broadcast</label>
    <nameField>
        <label>Broadcast ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcasts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>