force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__BLANK__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BLANK__c</fullName>
    <description>Use this field to add space between fields in a Console fieldset.</description>
    <label>&lt;BLANK&gt;</label>
    <length>1</length>
    <type>Text</type>
</CustomField>