force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__broadcastDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__broadcastDescription__c</fullName>
    <description>Column renamed from Whiteboard Description</description>
    <inlineHelpText>Use this field to enter a detailed description of the outage or issue. This description is appended to the Description field of incidents that are linked to the broadcast.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>