force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__broadcastMessage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__broadcastMessage__c</fullName>
    <inlineHelpText>Use this field to enter a short description of the outage or issue that should be broadcasted to users. This message scrolls across the top of the browser if you select the box Scroll Message check box.</inlineHelpText>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>