force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__broadcastTicker__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__broadcastTicker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to scroll the broadcast message across the top of the browser.</inlineHelpText>
    <label>Scroll Message</label>
    <type>Checkbox</type>
</CustomField>