force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__Category_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Category_ID__c</fullName>
    <formula>BMCServiceDesk__FKCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the broadcast&apos;s category. Categories allow you to classify the broadcast using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
    <label>Category~</label>
    <type>Text</type>
</CustomField>