force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__closeDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__closeDateTime__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the broadcast is closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>