force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__closeIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__closeIncident__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want to close all tasks linked to this broadcast. When you have resolved the broadcast, you might want to close all linked tasks because these tasks are no longer required.</inlineHelpText>
    <label>Close Linked Incidents</label>
    <type>Checkbox</type>
</CustomField>