force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__Display_In_SelfService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Display_In_SelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to display the broadcast in Self Service.</inlineHelpText>
    <label>Display In Self Service</label>
    <type>Checkbox</type>
</CustomField>