force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__FKClosedBy__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broadcasts2</relationshipName>
    <type>Lookup</type>
</CustomField>