force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__FKFrom__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broadcasts1</relationshipName>
    <type>Lookup</type>
</CustomField>