force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__FKStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the appropriate status for the broadcast. Status is used to display the progress of a broadcast through its stages of opening to closure.</inlineHelpText>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select an active status that applies to broadcasts.</errorMessage>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToBroadcasts__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Status__c</referenceTo>
    <relationshipLabel>Broadcasts (FKStatus)</relationshipLabel>
    <relationshipName>Broadcasts4</relationshipName>
    <type>Lookup</type>
</CustomField>