force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__Impact_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Impact_ID__c</fullName>
    <formula>BMCServiceDesk__FKImpact__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the broadcast&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the broadcast.</inlineHelpText>
    <label>Impact~</label>
    <type>Text</type>
</CustomField>