force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>