force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__postDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__postDate__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the broadcast was created.</inlineHelpText>
    <label>Post Date</label>
    <type>DateTime</type>
</CustomField>