force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__Profiles__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Profiles__c</fullName>
    <inlineHelpText>Use this field to select the staff to whom you want to display the broadcast message. This field is enabled when you clear the To All check box.</inlineHelpText>
    <label>To Profile</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>