force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__Status_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status_ID__c</fullName>
    <formula>BMCServiceDesk__FKStatus__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the appropriate status for the broadcast. Status is used to display the progress of a broadcast through its stages of opening to closure.</inlineHelpText>
    <label>Status~</label>
    <type>Text</type>
</CustomField>