force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/fields/BMCServiceDesk__toEveryone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__toEveryone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to display the broadcast to all staff. By default, broadcasts are displayed to all staff. If you decide to display the broadcast to a staff only, this field is cleared.</inlineHelpText>
    <label>To Everyone</label>
    <type>Checkbox</type>
</CustomField>