force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/validationRules/BMCServiceDesk__BroadcastMessage_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__BroadcastMessage_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__broadcastMessage__c ) , ISBLANK(BMCServiceDesk__broadcastMessage__c ))</errorConditionFormula>
    <errorMessage>Please enter Broadcast Message.</errorMessage>
</ValidationRule>