force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/validationRules/BMCServiceDesk__Cannot_Update_Closed_Broadcast.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Cannot_Update_Closed_Broadcast</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(BMCServiceDesk__RF_HasAttachments__c)), NOT(BMCServiceDesk__state__c ), NOT( PRIORVALUE(BMCServiceDesk__state__c)),NOT( ISNEW( )) )</errorConditionFormula>
    <errorMessage>This broadcast is closed. Reopen the broadcast to modify it.</errorMessage>
</ValidationRule>