force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/validationRules/BMCServiceDesk__Category_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Category_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Category_ID__c) , ISBLANK(BMCServiceDesk__Category_ID__c))</errorConditionFormula>
    <errorMessage>Please enter Category.</errorMessage>
</ValidationRule>