force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/validationRules/BMCServiceDesk__Check_ExpirationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Check_ExpirationDate</fullName>
    <active>true</active>
    <description>The expiration date and time should not be earlier than the current date and time or the post date and time.</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__expirationDate__c),ISBLANK(BMCServiceDesk__expirationDate__c) ) ) ,OR(BMCServiceDesk__expirationDate__c &lt;  NOW() ,BMCServiceDesk__expirationDate__c &lt; BMCServiceDesk__postDate__c))</errorConditionFormula>
    <errorMessage>The expiration date and time should not be earlier than the current date and time or the post date and time.</errorMessage>
</ValidationRule>