force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/validationRules/BMCServiceDesk__UniqueBroadcastIDCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__UniqueBroadcastIDCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW( ), ISCHANGED( Name )),NOT( ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Broadcasts__c.Fields.Name,$ObjectType.BMCServiceDesk__Broadcasts__c.Fields.Name,NULLVALUE(Name, Name) ))))</errorConditionFormula>
    <errorMessage>A Broadcast record with this Broadcast ID already exists. Enter unique Broadcast ID.</errorMessage>
</ValidationRule>