force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/listViews/BMCServiceDesk__Remedyforce_Broadcast_View.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Remedyforce_Broadcast_View</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__broadcastMessage__c</columns>
    <columns>BMCServiceDesk__FKPriority__c</columns>
    <columns>BMCServiceDesk__FKCategory__c</columns>
    <columns>BMCServiceDesk__FKStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BMCServiceDesk__state__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BMCServiceDesk__inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Remedyforce Broadcast View</label>
    <language>en_US</language>
</ListView>