force-app/main/default/objects/BMCServiceDesk__Broadcasts__c/listViews/Service_Desk_Broadcasts.listView-meta.xml
<ListView>
    <fullName>Service_Desk_Broadcasts</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Desk - CA</label>
    <queue>Service_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>